--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -50,7 +50,7 @@
 }
 
 
-@media screen and (max-width:580px){
+@media screen and (max-width:767px){
     .home-wrapper .main-wrapper .pages-wrapper{
         width: 100%;
         margin-left: 0;
